Even more cross-validation

--- a/notebooks/Jonas_4.ipynb
+++ b/notebooks/Jonas_4.ipynb
@@ -573,7 +573,151 @@
       "n_estimators   192.00\n",
       "reg_alpha        0.68\n",
       "score          664.28\n",
-      "Name: 16, dtype: float64\n"
+      "Name: 16, dtype: float64\n",
+      "eta              0.78\n",
+      "max_depth       37.00\n",
+      "n_estimators   216.00\n",
+      "reg_alpha        0.46\n",
+      "score          643.24\n",
+      "Name: 17, dtype: float64\n",
+      "eta              1.59\n",
+      "max_depth       20.00\n",
+      "n_estimators   153.00\n",
+      "reg_alpha        0.84\n",
+      "score          621.69\n",
+      "Name: 18, dtype: float64\n",
+      "eta              1.48\n",
+      "max_depth       27.00\n",
+      "n_estimators   203.00\n",
+      "reg_alpha        0.17\n",
+      "score          638.69\n",
+      "Name: 19, dtype: float64\n",
+      "eta              0.90\n",
+      "max_depth        4.00\n",
+      "n_estimators    85.00\n",
+      "reg_alpha        0.37\n",
+      "score          658.61\n",
+      "Name: 20, dtype: float64\n",
+      "eta              0.81\n",
+      "max_depth       41.00\n",
+      "n_estimators   123.00\n",
+      "reg_alpha        0.50\n",
+      "score          644.61\n",
+      "Name: 21, dtype: float64\n",
+      "eta              0.61\n",
+      "max_depth       33.00\n",
+      "n_estimators   116.00\n",
+      "reg_alpha        0.47\n",
+      "score          644.37\n",
+      "Name: 22, dtype: float64\n",
+      "eta                1.08\n",
+      "max_depth         29.00\n",
+      "n_estimators      10.00\n",
+      "reg_alpha          0.57\n",
+      "score          1,282.41\n",
+      "Name: 23, dtype: float64\n",
+      "eta              0.46\n",
+      "max_depth       16.00\n",
+      "n_estimators   126.00\n",
+      "reg_alpha        0.40\n",
+      "score          650.62\n",
+      "Name: 24, dtype: float64\n",
+      "eta              1.27\n",
+      "max_depth       12.00\n",
+      "n_estimators   170.00\n",
+      "reg_alpha        0.54\n",
+      "score          643.97\n",
+      "Name: 25, dtype: float64\n",
+      "eta              0.51\n",
+      "max_depth       52.00\n",
+      "n_estimators   139.00\n",
+      "reg_alpha        0.67\n",
+      "score          637.52\n",
+      "Name: 26, dtype: float64\n",
+      "eta              1.38\n",
+      "max_depth       38.00\n",
+      "n_estimators   201.00\n",
+      "reg_alpha        0.31\n",
+      "score          637.07\n",
+      "Name: 27, dtype: float64\n",
+      "eta              1.46\n",
+      "max_depth       11.00\n",
+      "n_estimators   105.00\n",
+      "reg_alpha        0.82\n",
+      "score          627.86\n",
+      "Name: 28, dtype: float64\n",
+      "eta                1.15\n",
+      "max_depth         30.00\n",
+      "n_estimators       7.00\n",
+      "reg_alpha          0.90\n",
+      "score          1,726.68\n",
+      "Name: 29, dtype: float64\n",
+      "eta              0.71\n",
+      "max_depth       13.00\n",
+      "n_estimators   149.00\n",
+      "reg_alpha        1.00\n",
+      "score          637.77\n",
+      "Name: 30, dtype: float64\n",
+      "eta              0.95\n",
+      "max_depth       10.00\n",
+      "n_estimators   242.00\n",
+      "reg_alpha        0.91\n",
+      "score          648.52\n",
+      "Name: 31, dtype: float64\n",
+      "eta              1.57\n",
+      "max_depth       43.00\n",
+      "n_estimators   167.00\n",
+      "reg_alpha        0.89\n",
+      "score          611.59\n",
+      "Name: 32, dtype: float64\n",
+      "eta              1.70\n",
+      "max_depth       28.00\n",
+      "n_estimators    31.00\n",
+      "reg_alpha        0.86\n",
+      "score          632.04\n",
+      "Name: 33, dtype: float64\n",
+      "eta              1.76\n",
+      "max_depth       51.00\n",
+      "n_estimators    91.00\n",
+      "reg_alpha        0.99\n",
+      "score          638.14\n",
+      "Name: 34, dtype: float64\n",
+      "eta              1.91\n",
+      "max_depth        7.00\n",
+      "n_estimators   227.00\n",
+      "reg_alpha        0.77\n",
+      "score          642.08\n",
+      "Name: 35, dtype: float64\n",
+      "eta              0.87\n",
+      "max_depth       50.00\n",
+      "n_estimators   156.00\n",
+      "reg_alpha        0.78\n",
+      "score          618.12\n",
+      "Name: 36, dtype: float64\n",
+      "eta              0.34\n",
+      "max_depth        2.00\n",
+      "n_estimators   233.00\n",
+      "reg_alpha        0.48\n",
+      "score          641.75\n",
+      "Name: 37, dtype: float64\n",
+      "eta              1.65\n",
+      "max_depth        8.00\n",
+      "n_estimators    79.00\n",
+      "reg_alpha        0.53\n",
+      "score          650.12\n",
+      "Name: 38, dtype: float64\n",
+      "eta              0.76\n",
+      "max_depth        1.00\n",
+      "n_estimators    69.00\n",
+      "reg_alpha        0.89\n",
+      "score          629.99\n",
+      "Name: 39, dtype: float64\n",
+      "eta              0.50\n",
+      "max_depth        5.00\n",
+      "n_estimators   178.00\n",
+      "reg_alpha        0.59\n",
+      "score          634.68\n",
+      "Name: 40, dtype: float64\n"
      ]
     }
    ],
