--- a/notebooks/Jonas_5.ipynb
+++ b/notebooks/Jonas_5.ipynb
@@ -522,7 +522,61 @@
       "n_estimators    91.00\n",
       "reg_alpha        0.23\n",
       "score          602.77\n",
-      "Name: 6, dtype: float64\n"
+      "Name: 6, dtype: float64\n",
+      "eta              0.01\n",
+      "max_depth       15.00\n",
+      "n_estimators   129.00\n",
+      "reg_alpha        0.39\n",
+      "score          625.37\n",
+      "Name: 7, dtype: float64\n",
+      "eta              0.17\n",
+      "max_depth       30.00\n",
+      "n_estimators   246.00\n",
+      "reg_alpha        0.44\n",
+      "score          634.62\n",
+      "Name: 8, dtype: float64\n",
+      "eta              0.81\n",
+      "max_depth       12.00\n",
+      "n_estimators   184.00\n",
+      "reg_alpha        0.04\n",
+      "score          635.30\n",
+      "Name: 9, dtype: float64\n",
+      "eta              1.28\n",
+      "max_depth        5.00\n",
+      "n_estimators    76.00\n",
+      "reg_alpha        0.17\n",
+      "score          607.79\n",
+      "Name: 10, dtype: float64\n",
+      "eta              1.82\n",
+      "max_depth       10.00\n",
+      "n_estimators    34.00\n",
+      "reg_alpha        0.19\n",
+      "score          654.24\n",
+      "Name: 11, dtype: float64\n",
+      "eta              1.19\n",
+      "max_depth        3.00\n",
+      "n_estimators    61.00\n",
+      "reg_alpha        0.60\n",
+      "score          616.60\n",
+      "Name: 12, dtype: float64\n",
+      "eta              1.06\n",
+      "max_depth       26.00\n",
+      "n_estimators   224.00\n",
+      "reg_alpha        0.29\n",
+      "score          626.96\n",
+      "Name: 13, dtype: float64\n",
+      "eta              0.95\n",
+      "max_depth       25.00\n",
+      "n_estimators   236.00\n",
+      "reg_alpha        0.45\n",
+      "score          631.05\n",
+      "Name: 14, dtype: float64\n",
+      "eta              1.04\n",
+      "max_depth       19.00\n",
+      "n_estimators   191.00\n",
+      "reg_alpha        0.05\n",
+      "score          620.51\n",
+      "Name: 15, dtype: float64\n"
      ]
     }
    ],
