--- a/notebooks/Jonas_6.ipynb
+++ b/notebooks/Jonas_6.ipynb
@@ -491,7 +491,8 @@
     "to_lag = data[[c for c in data.columns if not c in ['{}_{}'.format(s, agg) for agg in agg_types]]]\n",
     "features = create_lagged_features(to_lag, lags)\\\n",
     "    .join(extra_features[extra_features.station == s].set_index('date'))\\\n",
-    "    .join(rolling_mean_features[rolling_mean_features.station == s].set_index('date').drop('station', axis=1))\\\n",
+    "    .join(rolling_mean_features[rolling_mean_features.station == s]\n",
+    "          .set_index('date').drop(['station', 'max_conc_obs'], axis=1))\\\n",
     "    .join(obs_and_mods[obs_and_mods.station == s][['Concentration', 'day']].groupby('day').max())\n",
     "X = features[[c for c in features.columns if not c in [\n",
     "    'time', 'datetime', 'Concentration', 'target', 'station'\n",
@@ -532,9 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
