--- a/notebooks/Jonas_6.ipynb
+++ b/notebooks/Jonas_6.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The rpy2.ipython extension is already loaded. To reload it, use:\n",
-      "  %reload_ext rpy2.ipython\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import copy\n",
     "import glob\n",
@@ -27,48 +18,47 @@
     "import matplotlib.pyplot as plt\n",
     "pd.options.display.float_format = '{:,.2f}'.format\n",
     "%matplotlib inline\n",
-    "%load_ext rpy2.ipython\n",
     "%run ../airquality/data/gen_daily_targets.py\n",
     "%run ../airquality/data/prepare_data.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "test = pd.read_csv('../data/targets.csv')\n",
     "stations = pd.read_csv('../data/stations.csv')\n",
-    "extra_features = pd.read_csv('/Users/jonaspaulwestermann/Downloads/dataset_v1.csv', index_col=0).drop([\n",
+    "extra_features = pd.read_csv('/home/yc00032/Desktop/Just_Peanuts_II/BCNAirQualityDatathon/data/dataset_v1.csv', index_col=0).drop([\n",
     "    'holiday', 'target', \n",
     "], axis=1)\n",
-    "rolling_mean_features = pd.read_csv('../data/data_roll_day_conc_obs.csv')\n",
+    "rolling_mean_features = pd.read_csv('/home/yc00032/Desktop/Just_Peanuts_II/BCNAirQualityDatathon/data/data_roll_day_conc_obs.csv')\n",
     "extra_features = extra_features[[c for c in extra_features.columns if not 'dist' in c]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -91,13 +81,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>38.79</td>\n",
-       "      <td>34.11</td>\n",
+       "      <td>31.81</td>\n",
+       "      <td>31.59</td>\n",
        "      <td>2013-01-01</td>\n",
        "      <td>2.15</td>\n",
-       "      <td>41.39</td>\n",
+       "      <td>41.43</td>\n",
        "      <td>2013</td>\n",
-       "      <td>ES1438A</td>\n",
+       "      <td>ES1856A</td>\n",
        "      <td>2013-01-01 00:00:00</td>\n",
        "      <td>00:00:00</td>\n",
        "      <td>nan</td>\n",
@@ -105,6 +95,20 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>28.53</td>\n",
+       "      <td>27.48</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>2.12</td>\n",
+       "      <td>41.39</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>ES1992A</td>\n",
+       "      <td>2013-01-01 00:00:00</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
        "      <td>28.53</td>\n",
        "      <td>27.48</td>\n",
        "      <td>2013-01-01</td>\n",
@@ -118,7 +122,7 @@
        "      <td>nan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "      <td>35.85</td>\n",
        "      <td>42.57</td>\n",
        "      <td>2013-01-01</td>\n",
@@ -132,28 +136,14 @@
        "      <td>nan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>31.81</td>\n",
-       "      <td>31.59</td>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>2.15</td>\n",
-       "      <td>41.40</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>ES1480A</td>\n",
-       "      <td>2013-01-01 00:00:00</td>\n",
-       "      <td>00:00:00</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>31.81</td>\n",
-       "      <td>31.59</td>\n",
+       "      <td>38.79</td>\n",
+       "      <td>34.11</td>\n",
        "      <td>2013-01-01</td>\n",
        "      <td>2.15</td>\n",
-       "      <td>41.43</td>\n",
+       "      <td>41.39</td>\n",
        "      <td>2013</td>\n",
-       "      <td>ES1856A</td>\n",
+       "      <td>ES1438A</td>\n",
        "      <td>2013-01-01 00:00:00</td>\n",
        "      <td>00:00:00</td>\n",
        "      <td>nan</td>\n",
@@ -165,11 +155,11 @@
       ],
       "text/plain": [
        "   pred_0_days  pred_1_days         day  lon   lat  year  station  \\\n",
-       "0        38.79        34.11  2013-01-01 2.15 41.39  2013  ES1438A   \n",
-       "1        28.53        27.48  2013-01-01 2.13 41.38  2013  ES1396A   \n",
-       "2        35.85        42.57  2013-01-01 2.20 41.40  2013  ES0691A   \n",
-       "3        31.81        31.59  2013-01-01 2.15 41.40  2013  ES1480A   \n",
-       "4        31.81        31.59  2013-01-01 2.15 41.43  2013  ES1856A   \n",
+       "0        31.81        31.59  2013-01-01 2.15 41.43  2013  ES1856A   \n",
+       "1        28.53        27.48  2013-01-01 2.12 41.39  2013  ES1992A   \n",
+       "2        28.53        27.48  2013-01-01 2.13 41.38  2013  ES1396A   \n",
+       "3        35.85        42.57  2013-01-01 2.20 41.40  2013  ES0691A   \n",
+       "4        38.79        34.11  2013-01-01 2.15 41.39  2013  ES1438A   \n",
        "\n",
        "              datetime      time  Concentration  target  \n",
        "0  2013-01-01 00:00:00  00:00:00            nan     nan  \n",
@@ -179,7 +169,7 @@
        "4  2013-01-01 00:00:00  00:00:00            nan     nan  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,24 +187,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -438,7 +428,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +456,7 @@
        "       'ES1992A'], dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,13 +469,146 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eta              1.29\n",
+      "max_depth       32.00\n",
+      "n_estimators   212.00\n",
+      "reg_alpha        0.45\n",
+      "score           41.67\n",
+      "Name: 0, dtype: float64\n",
+      "eta                1.79\n",
+      "max_depth         27.00\n",
+      "n_estimators       5.00\n",
+      "reg_alpha          0.46\n",
+      "score          2,302.53\n",
+      "Name: 1, dtype: float64\n",
+      "eta             0.42\n",
+      "max_depth      34.00\n",
+      "n_estimators   83.00\n",
+      "reg_alpha       1.00\n",
+      "score          38.82\n",
+      "Name: 2, dtype: float64\n",
+      "eta              0.62\n",
+      "max_depth        4.00\n",
+      "n_estimators   228.00\n",
+      "reg_alpha        0.33\n",
+      "score           33.97\n",
+      "Name: 3, dtype: float64\n",
+      "eta             1.24\n",
+      "max_depth      10.00\n",
+      "n_estimators   55.00\n",
+      "reg_alpha       0.05\n",
+      "score          38.88\n",
+      "Name: 4, dtype: float64\n",
+      "eta             0.99\n",
+      "max_depth      16.00\n",
+      "n_estimators   27.00\n",
+      "reg_alpha       0.31\n",
+      "score          76.26\n",
+      "Name: 5, dtype: float64\n",
+      "eta              0.35\n",
+      "max_depth       25.00\n",
+      "n_estimators   206.00\n",
+      "reg_alpha        0.59\n",
+      "score           41.17\n",
+      "Name: 6, dtype: float64\n",
+      "eta              0.84\n",
+      "max_depth       18.00\n",
+      "n_estimators    11.00\n",
+      "reg_alpha        0.11\n",
+      "score          739.73\n",
+      "Name: 7, dtype: float64\n",
+      "eta              1.53\n",
+      "max_depth       21.00\n",
+      "n_estimators   220.00\n",
+      "reg_alpha        0.08\n",
+      "score           40.14\n",
+      "Name: 8, dtype: float64\n",
+      "eta              0.73\n",
+      "max_depth       19.00\n",
+      "n_estimators   130.00\n",
+      "reg_alpha        0.08\n",
+      "score           42.42\n",
+      "Name: 9, dtype: float64\n",
+      "eta              1.49\n",
+      "max_depth       31.00\n",
+      "n_estimators   230.00\n",
+      "reg_alpha        0.49\n",
+      "score           40.31\n",
+      "Name: 10, dtype: float64\n",
+      "eta             1.41\n",
+      "max_depth      33.00\n",
+      "n_estimators   26.00\n",
+      "reg_alpha       0.44\n",
+      "score          84.74\n",
+      "Name: 11, dtype: float64\n",
+      "eta              1.52\n",
+      "max_depth        2.00\n",
+      "n_estimators    23.00\n",
+      "reg_alpha        0.24\n",
+      "score          244.92\n",
+      "Name: 12, dtype: float64\n",
+      "eta             1.51\n",
+      "max_depth       5.00\n",
+      "n_estimators   76.00\n",
+      "reg_alpha       0.52\n",
+      "score          37.61\n",
+      "Name: 13, dtype: float64\n",
+      "eta             1.35\n",
+      "max_depth      22.00\n",
+      "n_estimators   49.00\n",
+      "reg_alpha       0.20\n",
+      "score          40.02\n",
+      "Name: 14, dtype: float64\n",
+      "eta              1.20\n",
+      "max_depth       23.00\n",
+      "n_estimators   162.00\n",
+      "reg_alpha        0.94\n",
+      "score           40.88\n",
+      "Name: 15, dtype: float64\n",
+      "eta              0.79\n",
+      "max_depth        7.00\n",
+      "n_estimators   188.00\n",
+      "reg_alpha        0.21\n",
+      "score           39.97\n",
+      "Name: 16, dtype: float64\n",
+      "eta              1.10\n",
+      "max_depth        8.00\n",
+      "n_estimators   127.00\n",
+      "reg_alpha        0.92\n",
+      "score           39.89\n",
+      "Name: 17, dtype: float64\n",
+      "eta              0.10\n",
+      "max_depth        9.00\n",
+      "n_estimators   138.00\n",
+      "reg_alpha        0.45\n",
+      "score           41.31\n",
+      "Name: 18, dtype: float64\n",
+      "eta             1.55\n",
+      "max_depth      24.00\n",
+      "n_estimators   36.00\n",
+      "reg_alpha       0.95\n",
+      "score          46.55\n",
+      "Name: 19, dtype: float64\n",
+      "eta              0.69\n",
+      "max_depth       29.00\n",
+      "n_estimators   247.00\n",
+      "reg_alpha        0.04\n",
+      "score           41.22\n",
+      "Name: 20, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import RandomizedSearchCV, KFold\n",
     "from sklearn.metrics import mean_squared_error, make_scorer\n",
     "\n",
     "lags = 25\n",
-    "s = 'ES1438A'\n",
+    "s = 'ES1992A'\n",
     "\n",
     "data = wide_series[list(wide_series.reset_index().day < '2015-01-01')]\n",
     "to_lag = data[[c for c in data.columns if not c in ['{}_{}'.format(s, agg) for agg in agg_types]]]\n",
@@ -541,7 +664,7 @@
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
-   "language": "python3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -554,7 +677,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
