--- a/notebooks/Jonas_6.ipynb
+++ b/notebooks/Jonas_6.ipynb
@@ -479,7 +479,104 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eta              1.08\n",
+      "max_depth       29.00\n",
+      "n_estimators    99.00\n",
+      "reg_alpha        0.26\n",
+      "score          101.88\n",
+      "Name: 0, dtype: float64\n",
+      "eta              1.68\n",
+      "max_depth       34.00\n",
+      "n_estimators   162.00\n",
+      "reg_alpha        0.23\n",
+      "score          104.29\n",
+      "Name: 1, dtype: float64\n",
+      "eta              0.29\n",
+      "max_depth       32.00\n",
+      "n_estimators   231.00\n",
+      "reg_alpha        0.26\n",
+      "score          103.05\n",
+      "Name: 2, dtype: float64\n",
+      "eta              1.51\n",
+      "max_depth       10.00\n",
+      "n_estimators   119.00\n",
+      "reg_alpha        0.15\n",
+      "score          101.51\n",
+      "Name: 3, dtype: float64\n",
+      "eta              1.01\n",
+      "max_depth       28.00\n",
+      "n_estimators   222.00\n",
+      "reg_alpha        0.31\n",
+      "score           97.76\n",
+      "Name: 4, dtype: float64\n",
+      "eta              1.50\n",
+      "max_depth        9.00\n",
+      "n_estimators   196.00\n",
+      "reg_alpha        0.98\n",
+      "score          108.24\n",
+      "Name: 5, dtype: float64\n",
+      "eta              1.59\n",
+      "max_depth       12.00\n",
+      "n_estimators    40.00\n",
+      "reg_alpha        0.43\n",
+      "score          113.82\n",
+      "Name: 6, dtype: float64\n",
+      "eta              0.97\n",
+      "max_depth       23.00\n",
+      "n_estimators   232.00\n",
+      "reg_alpha        0.94\n",
+      "score          107.62\n",
+      "Name: 7, dtype: float64\n",
+      "eta              0.18\n",
+      "max_depth        3.00\n",
+      "n_estimators   207.00\n",
+      "reg_alpha        0.68\n",
+      "score          123.13\n",
+      "Name: 8, dtype: float64\n",
+      "eta              0.14\n",
+      "max_depth       13.00\n",
+      "n_estimators   189.00\n",
+      "reg_alpha        0.39\n",
+      "score           99.04\n",
+      "Name: 9, dtype: float64\n",
+      "eta              0.53\n",
+      "max_depth        4.00\n",
+      "n_estimators   204.00\n",
+      "reg_alpha        0.38\n",
+      "score          104.05\n",
+      "Name: 10, dtype: float64\n",
+      "eta              0.52\n",
+      "max_depth       26.00\n",
+      "n_estimators   224.00\n",
+      "reg_alpha        0.05\n",
+      "score           99.35\n",
+      "Name: 11, dtype: float64\n",
+      "eta              0.82\n",
+      "max_depth       11.00\n",
+      "n_estimators    88.00\n",
+      "reg_alpha        0.64\n",
+      "score          110.55\n",
+      "Name: 12, dtype: float64\n",
+      "eta                1.49\n",
+      "max_depth         24.00\n",
+      "n_estimators      11.00\n",
+      "reg_alpha          0.01\n",
+      "score          1,142.57\n",
+      "Name: 13, dtype: float64\n",
+      "eta              0.24\n",
+      "max_depth       31.00\n",
+      "n_estimators    86.00\n",
+      "reg_alpha        0.15\n",
+      "score          101.22\n",
+      "Name: 14, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import RandomizedSearchCV, KFold\n",
     "from sklearn.metrics import mean_squared_error, make_scorer\n",
