--- a/notebooks/Jonas_8.ipynb
+++ b/notebooks/Jonas_8.ipynb
@@ -2,15 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The rpy2.ipython extension is already loaded. To reload it, use:\n",
-      "  %reload_ext rpy2.ipython\n"
+      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: During startup - \n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Warning messages:\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: 1: Setting LC_COLLATE failed, using \"C\" \n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: 2: Setting LC_TIME failed, using \"C\" \n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: 3: Setting LC_MESSAGES failed, using \"C\" \n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: 4: Setting LC_MONETARY failed, using \"C\" \n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n"
      ]
     }
    ],
@@ -34,8 +49,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "test = pd.read_csv('../data/targets.csv')\n",
@@ -43,12 +60,13 @@
     "extra_features = pd.read_csv('/Users/jonaspaulwestermann/Downloads/dataset_v1.csv', index_col=0).drop([\n",
     "    'holiday', 'target', \n",
     "], axis=1)\n",
+    "rolling_mean_features = pd.read_csv('../data/data_roll_day_conc_obs.csv')\n",
     "extra_features = extra_features[[c for c in extra_features.columns if not 'dist' in c]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +194,7 @@
        "4  2013-01-01 00:00:00  00:00:00            nan     nan  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +453,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,163 +471,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array(['ES0691A', 'ES1396A', 'ES1438A', 'ES1480A', 'ES1679A', 'ES1856A',\n",
-       "       'ES1992A'], dtype=object)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nu      0.00\n",
+      "score   0.29\n",
+      "Name: 0, dtype: float64\n",
+      "nu      0.01\n",
+      "score   0.28\n",
+      "Name: 1, dtype: float64\n",
+      "nu      0.02\n",
+      "score   0.28\n",
+      "Name: 2, dtype: float64\n",
+      "nu      0.03\n",
+      "score   0.28\n",
+      "Name: 3, dtype: float64\n",
+      "nu      0.04\n",
+      "score   0.28\n",
+      "Name: 4, dtype: float64\n"
+     ]
     }
    ],
    "source": [
-    "test.station.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>eta</th>\n",
-       "      <th>max_depth</th>\n",
-       "      <th>n_estimators</th>\n",
-       "      <th>reg_alpha</th>\n",
-       "      <th>score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.15</td>\n",
-       "      <td>31</td>\n",
-       "      <td>193</td>\n",
-       "      <td>0.41</td>\n",
-       "      <td>638.56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.88</td>\n",
-       "      <td>2</td>\n",
-       "      <td>146</td>\n",
-       "      <td>0.62</td>\n",
-       "      <td>626.18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.37</td>\n",
-       "      <td>23</td>\n",
-       "      <td>233</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>627.25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.36</td>\n",
-       "      <td>5</td>\n",
-       "      <td>125</td>\n",
-       "      <td>0.54</td>\n",
-       "      <td>604.93</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.73</td>\n",
-       "      <td>33</td>\n",
-       "      <td>116</td>\n",
-       "      <td>0.07</td>\n",
-       "      <td>628.60</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   eta  max_depth  n_estimators  reg_alpha  score\n",
-       "0 0.15         31           193       0.41 638.56\n",
-       "1 1.88          2           146       0.62 626.18\n",
-       "2 0.37         23           233       0.04 627.25\n",
-       "3 1.36          5           125       0.54 604.93\n",
-       "4 1.73         33           116       0.07 628.60"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "from sklearn.svm import NuSVC\n",
     "from sklearn.model_selection import RandomizedSearchCV, KFold\n",
-    "from sklearn.metrics import mean_squared_error, make_scorer\n",
+    "from sklearn.metrics import log_loss, make_scorer\n",
     "\n",
-    "lags = 25\n",
-    "s = 'ES1438A'\n",
+    "lags = 100\n",
+    "for s in test.station.unique():\n",
+    "    data = wide_series[list(wide_series.reset_index().day < '2015-01-01')]\n",
+    "    to_lag = data[[c for c in data.columns if not c in ['{}_{}'.format(s, agg) for agg in agg_types]]]\n",
+    "    features = create_lagged_features(to_lag, lags)\\\n",
+    "        .join(extra_features[extra_features.station == s].set_index('date'))\\\n",
+    "        .join(rolling_mean_features[rolling_mean_features.station == s]\n",
+    "              .set_index('date').drop(['station', 'max_conc_obs'], axis=1))\\\n",
+    "        .join(obs_and_mods[obs_and_mods.station == s][['Concentration', 'day']].groupby('day').max())\\\n",
+    "        .fillna(method='bfill').fillna(method='ffill')\n",
+    "    X = features[[c for c in features.columns if not c in [\n",
+    "        'time', 'datetime', 'Concentration', 'target', 'station'\n",
+    "    ]]].values\n",
+    "    y = (features['Concentration'].fillna(method='ffill').values > 100).astype(int)\n",
     "\n",
-    "data = wide_series[list(wide_series.reset_index().day < '2015-01-01')]\n",
-    "to_lag = data[[c for c in data.columns if not c in ['{}_{}'.format(s, agg) for agg in agg_types]]]\n",
-    "features = create_lagged_features(to_lag, lags)\\\n",
-    "    .join(extra_features_train[extra_features_train.station == s].set_index('date'))\\\n",
-    "    .join(obs_and_mods[obs_and_mods.station == s][['Concentration', 'day']].groupby('day').max())\n",
-    "X = features[[c for c in features.columns if not c in [\n",
-    "    'time', 'datetime', 'Concentration', 'target', 'station'\n",
-    "]]].values\n",
-    "y = features['Concentration'].fillna(method='ffill').values\n",
+    "    params = pd.DataFrame({\n",
+    "        'nu': np.linspace(0.001, .999, 100),\n",
+    "        'score': [np.nan] * 100\n",
+    "    })\n",
+    "    for i, r in params[['nu']].iterrows():\n",
+    "        kf = KFold(n_splits=3)\n",
+    "        metric = []\n",
+    "        for train_index, test_index in kf.split(X):\n",
+    "            X_train, X_test = X[train_index], X[test_index]\n",
+    "            y_train, y_test = y[train_index], y[test_index]\n",
+    "            p = dict(r)\n",
+    "            p['probability'] = True\n",
+    "            model = NuSVC(**p)\n",
+    "            model.fit(X_train, y_train)\n",
+    "            y_pred = model.predict_proba(X_test)\n",
+    "            metric.append(\n",
+    "                log_loss(y_test, y_pred, labels=(0, 1))\n",
+    "            ) \n",
     "\n",
-    "params = pd.DataFrame({\n",
-    "    'eta': random.sample(list(np.linspace(0.01, 2, 201)), 200),\n",
-    "    'n_estimators': random.sample(list(range(1, 250)), 200),\n",
-    "    'reg_alpha': random.sample(list(np.linspace(0.01, 1, 201)), 200),\n",
-    "    'max_depth': random.sample(list(range(1, 35)), 25) * 8,\n",
-    "    'score': [np.nan] * 200\n",
-    "})\n",
-    "for i, r in params[['eta', 'n_estimators', 'reg_alpha', 'max_depth']].iterrows():\n",
-    "    kf = KFold(n_splits=3)\n",
-    "    metric = []\n",
-    "    for train_index, test_index in kf.split(X):\n",
-    "        X_train, X_test = X[train_index], X[test_index]\n",
-    "        y_train, y_test = y[train_index], y[test_index]\n",
-    "        p = dict(r)\n",
-    "        p['n_estimators'] = int(p['n_estimators'])\n",
-    "        p['max_depth'] = int(p['max_depth'])\n",
-    "        model = xgb.XGBRegressor(**p)\n",
-    "        model.fit(X_train, y_train)\n",
-    "        y_pred = model.predict(X_test)\n",
-    "        metric.append(\n",
-    "            mean_squared_error(y_test, y_pred)\n",
-    "        ) \n",
-    "        \n",
-    "    params.loc[i, 'score'] = np.mean(metric)\n",
-    "    print(params.iloc[i])\n",
-    "    \n",
-    "params.to_csv('../reports/cv_xgb_Jonas_5_{}_{}.csv'\n",
-    "              .format(s, len(glob.glob('../reports/cv_xgb_Jonas_5_{}_*'.format(s)))))\n",
-    "params.head()"
+    "        params.loc[i, 'score'] = np.mean(metric)\n",
+    "        print(params.iloc[i])\n",
+    "\n",
+    "    params.to_csv('../reports/cv_svm_Jonas_7_{}_{}.csv'\n",
+    "                  .format(s, len(glob.glob('../reports/cv_svm_Jonas_7_{}_*'.format(s)))))\n",
+    "    params.head()"
    ]
   },
   {
