And more cross-validation

--- a/notebooks/Jonas_7.ipynb
+++ b/notebooks/Jonas_7.ipynb
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,97 @@
       "Name: 16, dtype: float64\n",
       "n_neighbors   18.00\n",
       "score          0.47\n",
-      "Name: 17, dtype: float64\n"
+      "Name: 17, dtype: float64\n",
+      "n_neighbors   19.00\n",
+      "score          0.38\n",
+      "Name: 18, dtype: float64\n",
+      "n_neighbors   20.00\n",
+      "score          0.30\n",
+      "Name: 19, dtype: float64\n",
+      "n_neighbors   21.00\n",
+      "score          0.30\n",
+      "Name: 20, dtype: float64\n",
+      "n_neighbors   22.00\n",
+      "score          0.30\n",
+      "Name: 21, dtype: float64\n",
+      "n_neighbors   23.00\n",
+      "score          0.30\n",
+      "Name: 22, dtype: float64\n",
+      "n_neighbors   24.00\n",
+      "score          0.30\n",
+      "Name: 23, dtype: float64\n",
+      "n_neighbors    1.00\n",
+      "score         10.32\n",
+      "Name: 0, dtype: float64\n",
+      "n_neighbors   2.00\n",
+      "score         4.42\n",
+      "Name: 1, dtype: float64\n",
+      "n_neighbors   3.00\n",
+      "score         1.98\n",
+      "Name: 2, dtype: float64\n",
+      "n_neighbors   4.00\n",
+      "score         1.35\n",
+      "Name: 3, dtype: float64\n",
+      "n_neighbors   5.00\n",
+      "score         1.03\n",
+      "Name: 4, dtype: float64\n",
+      "n_neighbors   6.00\n",
+      "score         0.77\n",
+      "Name: 5, dtype: float64\n",
+      "n_neighbors   7.00\n",
+      "score         0.77\n",
+      "Name: 6, dtype: float64\n",
+      "n_neighbors   8.00\n",
+      "score         0.72\n",
+      "Name: 7, dtype: float64\n",
+      "n_neighbors   9.00\n",
+      "score         0.54\n",
+      "Name: 8, dtype: float64\n",
+      "n_neighbors   10.00\n",
+      "score          0.54\n",
+      "Name: 9, dtype: float64\n",
+      "n_neighbors   11.00\n",
+      "score          0.50\n",
+      "Name: 10, dtype: float64\n",
+      "n_neighbors   12.00\n",
+      "score          0.46\n",
+      "Name: 11, dtype: float64\n",
+      "n_neighbors   13.00\n",
+      "score          0.46\n",
+      "Name: 12, dtype: float64\n",
+      "n_neighbors   14.00\n",
+      "score          0.46\n",
+      "Name: 13, dtype: float64\n",
+      "n_neighbors   15.00\n",
+      "score          0.42\n",
+      "Name: 14, dtype: float64\n",
+      "n_neighbors   16.00\n",
+      "score          0.42\n",
+      "Name: 15, dtype: float64\n",
+      "n_neighbors   17.00\n",
+      "score          0.42\n",
+      "Name: 16, dtype: float64\n",
+      "n_neighbors   18.00\n",
+      "score          0.42\n",
+      "Name: 17, dtype: float64\n",
+      "n_neighbors   19.00\n",
+      "score          0.42\n",
+      "Name: 18, dtype: float64\n",
+      "n_neighbors   20.00\n",
+      "score          0.42\n",
+      "Name: 19, dtype: float64\n",
+      "n_neighbors   21.00\n",
+      "score          0.42\n",
+      "Name: 20, dtype: float64\n",
+      "n_neighbors   22.00\n",
+      "score          0.42\n",
+      "Name: 21, dtype: float64\n",
+      "n_neighbors   23.00\n",
+      "score          0.43\n",
+      "Name: 22, dtype: float64\n",
+      "n_neighbors   24.00\n",
+      "score          0.43\n",
+      "Name: 23, dtype: float64\n"
      ]
     }
    ],
