--- a/notebooks/Jonas_5.ipynb
+++ b/notebooks/Jonas_5.ipynb
@@ -2,15 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The rpy2.ipython extension is already loaded. To reload it, use:\n",
-      "  %reload_ext rpy2.ipython\n"
+      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: During startup - \n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Warning messages:\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: 1: Setting LC_COLLATE failed, using \"C\" \n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: 2: Setting LC_TIME failed, using \"C\" \n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: 3: Setting LC_MESSAGES failed, using \"C\" \n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: 4: Setting LC_MONETARY failed, using \"C\" \n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n"
      ]
     }
    ],
@@ -34,8 +49,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "test = pd.read_csv('../data/targets.csv')\n",
@@ -48,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +193,7 @@
        "4  2013-01-01 00:00:00  00:00:00            nan     nan  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +452,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +480,7 @@
        "       'ES1992A'], dtype=object)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -508,58 +525,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.15</td>\n",
-       "      <td>31</td>\n",
-       "      <td>193</td>\n",
-       "      <td>0.41</td>\n",
-       "      <td>638.56</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>26</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>2,263.48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1.88</td>\n",
-       "      <td>2</td>\n",
-       "      <td>146</td>\n",
-       "      <td>0.62</td>\n",
-       "      <td>626.18</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>12</td>\n",
+       "      <td>220</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>611.94</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.37</td>\n",
-       "      <td>23</td>\n",
-       "      <td>233</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>627.25</td>\n",
+       "      <td>1.56</td>\n",
+       "      <td>18</td>\n",
+       "      <td>64</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>598.43</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1.36</td>\n",
-       "      <td>5</td>\n",
-       "      <td>125</td>\n",
-       "      <td>0.54</td>\n",
-       "      <td>604.93</td>\n",
+       "      <td>1.73</td>\n",
+       "      <td>4</td>\n",
+       "      <td>76</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>566.57</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1.73</td>\n",
-       "      <td>33</td>\n",
-       "      <td>116</td>\n",
-       "      <td>0.07</td>\n",
-       "      <td>628.60</td>\n",
+       "      <td>1.35</td>\n",
+       "      <td>8</td>\n",
+       "      <td>93</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>595.32</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   eta  max_depth  n_estimators  reg_alpha  score\n",
-       "0 0.15         31           193       0.41 638.56\n",
-       "1 1.88          2           146       0.62 626.18\n",
-       "2 0.37         23           233       0.04 627.25\n",
-       "3 1.36          5           125       0.54 604.93\n",
-       "4 1.73         33           116       0.07 628.60"
+       "   eta  max_depth  n_estimators  reg_alpha    score\n",
+       "0 0.24         26             5       0.49 2,263.48\n",
+       "1 0.90         12           220       0.81   611.94\n",
+       "2 1.56         18            64       0.01   598.43\n",
+       "3 1.73          4            76       0.30   566.57\n",
+       "4 1.35          8            93       0.85   595.32"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,12 +586,12 @@
     "from sklearn.metrics import mean_squared_error, make_scorer\n",
     "\n",
     "lags = 25\n",
-    "s = 'ES1438A'\n",
+    "s = 'ES1396A'\n",
     "\n",
     "data = wide_series[list(wide_series.reset_index().day < '2015-01-01')]\n",
     "to_lag = data[[c for c in data.columns if not c in ['{}_{}'.format(s, agg) for agg in agg_types]]]\n",
     "features = create_lagged_features(to_lag, lags)\\\n",
-    "    .join(extra_features_train[extra_features_train.station == s].set_index('date'))\\\n",
+    "    .join(extra_features[extra_features.station == s].set_index('date'))\\\n",
     "    .join(obs_and_mods[obs_and_mods.station == s][['Concentration', 'day']].groupby('day').max())\n",
     "X = features[[c for c in features.columns if not c in [\n",
     "    'time', 'datetime', 'Concentration', 'target', 'station'\n",
