And more cross-validation and some notes :clown:

--- a/notebooks/Jonas_7.ipynb
+++ b/notebooks/Jonas_7.ipynb
@@ -470,6 +470,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cross-Validation KNN"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
