--- a/notebooks/Jonas_8.ipynb
+++ b/notebooks/Jonas_8.ipynb
@@ -478,6 +478,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(730, 2873)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -485,54 +505,243 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nu      0.76\n",
+      "nu      0.96\n",
       "score   2.74\n",
       "Name: 0, dtype: float64\n",
-      "nu      0.47\n",
+      "nu      0.44\n",
       "score   2.74\n",
       "Name: 1, dtype: float64\n",
-      "nu      0.42\n",
-      "score   2.74\n",
+      "nu      0.05\n",
+      "score   0.28\n",
       "Name: 2, dtype: float64\n",
-      "nu      0.52\n",
+      "nu      0.39\n",
       "score   2.74\n",
       "Name: 3, dtype: float64\n",
-      "nu      0.05\n",
-      "score   0.28\n",
+      "nu      0.90\n",
+      "score   2.74\n",
       "Name: 4, dtype: float64\n",
-      "nu      0.79\n",
+      "nu      0.63\n",
       "score   2.74\n",
       "Name: 5, dtype: float64\n",
-      "nu      0.19\n",
-      "score   2.25\n",
+      "nu      0.78\n",
+      "score   2.74\n",
       "Name: 6, dtype: float64\n",
-      "nu      0.01\n",
-      "score   0.28\n",
+      "nu      0.95\n",
+      "score   2.74\n",
       "Name: 7, dtype: float64\n",
-      "nu      0.05\n",
-      "score   0.28\n",
+      "nu      0.35\n",
+      "score   2.74\n",
       "Name: 8, dtype: float64\n",
-      "nu      0.81\n",
+      "nu      0.72\n",
       "score   2.74\n",
       "Name: 9, dtype: float64\n",
-      "nu      0.34\n",
+      "nu      0.54\n",
       "score   2.74\n",
       "Name: 10, dtype: float64\n",
-      "nu      0.22\n",
+      "nu      0.63\n",
       "score   2.74\n",
       "Name: 11, dtype: float64\n",
-      "nu      0.45\n",
+      "nu      0.77\n",
       "score   2.74\n",
       "Name: 12, dtype: float64\n",
-      "nu      0.33\n",
+      "nu      0.65\n",
       "score   2.74\n",
       "Name: 13, dtype: float64\n",
-      "nu      0.50\n",
+      "nu      0.31\n",
       "score   2.74\n",
       "Name: 14, dtype: float64\n",
-      "nu      0.79\n",
+      "nu      0.20\n",
       "score   2.74\n",
-      "Name: 15, dtype: float64\n"
+      "Name: 15, dtype: float64\n",
+      "nu      0.38\n",
+      "score   2.74\n",
+      "Name: 16, dtype: float64\n",
+      "nu      0.99\n",
+      "score   2.74\n",
+      "Name: 17, dtype: float64\n",
+      "nu      0.50\n",
+      "score   2.74\n",
+      "Name: 18, dtype: float64\n",
+      "nu      0.66\n",
+      "score   2.74\n",
+      "Name: 19, dtype: float64\n",
+      "nu      0.25\n",
+      "score   2.74\n",
+      "Name: 20, dtype: float64\n",
+      "nu      0.64\n",
+      "score   2.74\n",
+      "Name: 21, dtype: float64\n",
+      "nu      0.50\n",
+      "score   2.74\n",
+      "Name: 22, dtype: float64\n",
+      "nu      0.10\n",
+      "score   0.28\n",
+      "Name: 23, dtype: float64\n",
+      "nu      0.69\n",
+      "score   2.74\n",
+      "Name: 24, dtype: float64\n",
+      "nu      0.23\n",
+      "score   2.74\n",
+      "Name: 25, dtype: float64\n",
+      "nu      0.31\n",
+      "score   2.74\n",
+      "Name: 26, dtype: float64\n",
+      "nu      0.11\n",
+      "score   0.28\n",
+      "Name: 27, dtype: float64\n",
+      "nu      0.39\n",
+      "score   2.74\n",
+      "Name: 28, dtype: float64\n",
+      "nu      0.32\n",
+      "score   2.74\n",
+      "Name: 29, dtype: float64\n",
+      "nu      0.27\n",
+      "score   2.74\n",
+      "Name: 30, dtype: float64\n",
+      "nu      0.86\n",
+      "score   2.74\n",
+      "Name: 31, dtype: float64\n",
+      "nu      0.48\n",
+      "score   2.74\n",
+      "Name: 32, dtype: float64\n",
+      "nu      0.32\n",
+      "score   2.74\n",
+      "Name: 33, dtype: float64\n",
+      "nu      0.14\n",
+      "score   1.35\n",
+      "Name: 34, dtype: float64\n",
+      "nu      0.73\n",
+      "score   2.74\n",
+      "Name: 35, dtype: float64\n",
+      "nu      0.27\n",
+      "score   2.74\n",
+      "Name: 36, dtype: float64\n",
+      "nu      0.71\n",
+      "score   2.74\n",
+      "Name: 37, dtype: float64\n",
+      "nu      0.59\n",
+      "score   2.74\n",
+      "Name: 38, dtype: float64\n",
+      "nu      0.51\n",
+      "score   2.74\n",
+      "Name: 39, dtype: float64\n",
+      "nu      0.13\n",
+      "score   0.28\n",
+      "Name: 40, dtype: float64\n",
+      "nu      0.72\n",
+      "score   2.74\n",
+      "Name: 41, dtype: float64\n",
+      "nu      0.70\n",
+      "score   2.74\n",
+      "Name: 42, dtype: float64\n",
+      "nu      0.40\n",
+      "score   2.74\n",
+      "Name: 43, dtype: float64\n",
+      "nu      0.02\n",
+      "score   0.28\n",
+      "Name: 44, dtype: float64\n",
+      "nu      0.10\n",
+      "score   0.28\n",
+      "Name: 45, dtype: float64\n",
+      "nu      0.81\n",
+      "score   2.74\n",
+      "Name: 46, dtype: float64\n",
+      "nu      0.01\n",
+      "score   0.28\n",
+      "Name: 47, dtype: float64\n",
+      "nu      0.37\n",
+      "score   2.74\n",
+      "Name: 48, dtype: float64\n",
+      "nu      0.77\n",
+      "score   2.74\n",
+      "Name: 49, dtype: float64\n",
+      "nu      0.77\n",
+      "score   2.74\n",
+      "Name: 50, dtype: float64\n",
+      "nu      0.80\n",
+      "score   2.74\n",
+      "Name: 51, dtype: float64\n",
+      "nu      0.05\n",
+      "score   0.28\n",
+      "Name: 52, dtype: float64\n",
+      "nu      0.51\n",
+      "score   2.74\n",
+      "Name: 53, dtype: float64\n",
+      "nu      0.39\n",
+      "score   2.74\n",
+      "Name: 54, dtype: float64\n",
+      "nu      0.80\n",
+      "score   2.74\n",
+      "Name: 55, dtype: float64\n",
+      "nu      0.93\n",
+      "score   2.74\n",
+      "Name: 56, dtype: float64\n",
+      "nu      0.75\n",
+      "score   2.74\n",
+      "Name: 57, dtype: float64\n",
+      "nu      0.04\n",
+      "score   0.28\n",
+      "Name: 58, dtype: float64\n",
+      "nu      0.34\n",
+      "score   2.74\n",
+      "Name: 59, dtype: float64\n",
+      "nu      0.76\n",
+      "score   2.74\n",
+      "Name: 60, dtype: float64\n",
+      "nu      0.97\n",
+      "score   2.74\n",
+      "Name: 61, dtype: float64\n",
+      "nu      0.32\n",
+      "score   2.74\n",
+      "Name: 62, dtype: float64\n",
+      "nu      0.30\n",
+      "score   2.74\n",
+      "Name: 63, dtype: float64\n",
+      "nu      0.50\n",
+      "score   2.74\n",
+      "Name: 64, dtype: float64\n",
+      "nu      0.63\n",
+      "score   2.74\n",
+      "Name: 65, dtype: float64\n",
+      "nu      0.85\n",
+      "score   2.74\n",
+      "Name: 66, dtype: float64\n",
+      "nu      0.92\n",
+      "score   2.74\n",
+      "Name: 67, dtype: float64\n",
+      "nu      0.08\n",
+      "score   0.28\n",
+      "Name: 68, dtype: float64\n",
+      "nu      0.75\n",
+      "score   2.74\n",
+      "Name: 69, dtype: float64\n",
+      "nu      0.87\n",
+      "score   2.74\n",
+      "Name: 70, dtype: float64\n",
+      "nu      0.60\n",
+      "score   2.74\n",
+      "Name: 71, dtype: float64\n",
+      "nu      0.09\n",
+      "score   0.28\n",
+      "Name: 72, dtype: float64\n",
+      "nu      0.21\n",
+      "score   2.74\n",
+      "Name: 73, dtype: float64\n",
+      "nu      0.58\n",
+      "score   2.74\n",
+      "Name: 74, dtype: float64\n",
+      "nu      0.50\n",
+      "score   2.74\n",
+      "Name: 75, dtype: float64\n",
+      "nu      0.10\n",
+      "score   0.28\n",
+      "Name: 76, dtype: float64\n",
+      "nu      0.09\n",
+      "score   0.28\n",
+      "Name: 77, dtype: float64\n",
+      "nu      0.68\n",
+      "score   2.74\n",
+      "Name: 78, dtype: float64\n"
      ]
     }
    ],
@@ -581,8 +790,8 @@
     "        params.loc[i, 'score'] = np.mean(metric)\n",
     "        print(params.iloc[i])\n",
     "\n",
-    "    params.to_csv('../reports/cv_svm_Jonas_7_{}_{}.csv'\n",
-    "                  .format(s, len(glob.glob('../reports/cv_svm_Jonas_7_{}_*'.format(s)))))\n",
+    "    params.to_csv('../reports/cv_svm_Jonas_8_{}_{}.csv'\n",
+    "                  .format(s, len(glob.glob('../reports/cv_svm_Jonas_8_{}_*'.format(s)))))\n",
     "    params.head()"
    ]
   },
