--- a/notebooks/Jonas_6.ipynb
+++ b/notebooks/Jonas_6.ipynb
@@ -2,15 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The rpy2.ipython extension is already loaded. To reload it, use:\n",
-      "  %reload_ext rpy2.ipython\n"
+      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: During startup - \n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Warning messages:\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: 1: Setting LC_COLLATE failed, using \"C\" \n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: 2: Setting LC_TIME failed, using \"C\" \n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: 3: Setting LC_MESSAGES failed, using \"C\" \n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: 4: Setting LC_MONETARY failed, using \"C\" \n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n"
      ]
     }
    ],
@@ -34,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -51,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +194,7 @@
        "4  2013-01-01 00:00:00  00:00:00            nan     nan  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +453,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +481,7 @@
        "       'ES1992A'], dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +509,7 @@
     "from sklearn.metrics import mean_squared_error, make_scorer\n",
     "\n",
     "lags = 25\n",
-    "s = 'ES1438A'\n",
+    "s = 'ES1856A'\n",
     "\n",
     "data = wide_series[list(wide_series.reset_index().day < '2015-01-01')]\n",
     "to_lag = data[[c for c in data.columns if not c in ['{}_{}'.format(s, agg) for agg in agg_types]]]\n",
@@ -538,6 +553,15 @@
     "              .format(s, len(glob.glob('../reports/cv_xgb_Jonas_6_{}_*'.format(s)))))\n",
     "params.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
