more a lot of changes

--- a/notebooks/Jonas_6.ipynb
+++ b/notebooks/Jonas_6.ipynb
@@ -629,7 +629,277 @@
       "n_estimators   33.00\n",
       "reg_alpha       0.74\n",
       "score          52.49\n",
-      "Name: 25, dtype: float64\n"
+      "Name: 25, dtype: float64\n",
+      "eta              0.61\n",
+      "max_depth       27.00\n",
+      "n_estimators   203.00\n",
+      "reg_alpha        0.57\n",
+      "score           40.92\n",
+      "Name: 26, dtype: float64\n",
+      "eta              1.95\n",
+      "max_depth       34.00\n",
+      "n_estimators   144.00\n",
+      "reg_alpha        0.21\n",
+      "score           41.84\n",
+      "Name: 27, dtype: float64\n",
+      "eta              0.65\n",
+      "max_depth        4.00\n",
+      "n_estimators   249.00\n",
+      "reg_alpha        0.74\n",
+      "score           35.18\n",
+      "Name: 28, dtype: float64\n",
+      "eta             0.87\n",
+      "max_depth      10.00\n",
+      "n_estimators   82.00\n",
+      "reg_alpha       0.26\n",
+      "score          39.98\n",
+      "Name: 29, dtype: float64\n",
+      "eta              1.13\n",
+      "max_depth       16.00\n",
+      "n_estimators   131.00\n",
+      "reg_alpha        0.06\n",
+      "score           41.43\n",
+      "Name: 30, dtype: float64\n",
+      "eta              1.15\n",
+      "max_depth       25.00\n",
+      "n_estimators   231.00\n",
+      "reg_alpha        0.48\n",
+      "score           40.30\n",
+      "Name: 31, dtype: float64\n",
+      "eta              0.16\n",
+      "max_depth       18.00\n",
+      "n_estimators   164.00\n",
+      "reg_alpha        0.17\n",
+      "score           40.02\n",
+      "Name: 32, dtype: float64\n",
+      "eta             0.22\n",
+      "max_depth      21.00\n",
+      "n_estimators   96.00\n",
+      "reg_alpha       0.47\n",
+      "score          40.32\n",
+      "Name: 33, dtype: float64\n",
+      "eta             0.95\n",
+      "max_depth      19.00\n",
+      "n_estimators   51.00\n",
+      "reg_alpha       0.94\n",
+      "score          38.76\n",
+      "Name: 34, dtype: float64\n",
+      "eta             0.98\n",
+      "max_depth      31.00\n",
+      "n_estimators   84.00\n",
+      "reg_alpha       0.88\n",
+      "score          38.76\n",
+      "Name: 35, dtype: float64\n",
+      "eta              1.45\n",
+      "max_depth       33.00\n",
+      "n_estimators   137.00\n",
+      "reg_alpha        0.40\n",
+      "score           39.94\n",
+      "Name: 36, dtype: float64\n",
+      "eta              0.83\n",
+      "max_depth        2.00\n",
+      "n_estimators   174.00\n",
+      "reg_alpha        0.75\n",
+      "score           35.51\n",
+      "Name: 37, dtype: float64\n",
+      "eta              0.88\n",
+      "max_depth        5.00\n",
+      "n_estimators   167.00\n",
+      "reg_alpha        0.72\n",
+      "score           37.41\n",
+      "Name: 38, dtype: float64\n",
+      "eta              0.92\n",
+      "max_depth       22.00\n",
+      "n_estimators   214.00\n",
+      "reg_alpha        0.63\n",
+      "score           41.28\n",
+      "Name: 39, dtype: float64\n",
+      "eta              1.06\n",
+      "max_depth       23.00\n",
+      "n_estimators   207.00\n",
+      "reg_alpha        0.98\n",
+      "score           40.79\n",
+      "Name: 40, dtype: float64\n",
+      "eta              0.30\n",
+      "max_depth        7.00\n",
+      "n_estimators   112.00\n",
+      "reg_alpha        0.98\n",
+      "score           39.52\n",
+      "Name: 41, dtype: float64\n",
+      "eta              1.86\n",
+      "max_depth        8.00\n",
+      "n_estimators   128.00\n",
+      "reg_alpha        0.90\n",
+      "score           39.88\n",
+      "Name: 42, dtype: float64\n",
+      "eta              0.52\n",
+      "max_depth        9.00\n",
+      "n_estimators   182.00\n",
+      "reg_alpha        0.85\n",
+      "score           39.15\n",
+      "Name: 43, dtype: float64\n",
+      "eta              0.32\n",
+      "max_depth       24.00\n",
+      "n_estimators    14.00\n",
+      "reg_alpha        0.58\n",
+      "score          438.61\n",
+      "Name: 44, dtype: float64\n",
+      "eta             1.88\n",
+      "max_depth      29.00\n",
+      "n_estimators   46.00\n",
+      "reg_alpha       0.23\n",
+      "score          41.27\n",
+      "Name: 45, dtype: float64\n",
+      "eta             0.57\n",
+      "max_depth      28.00\n",
+      "n_estimators   81.00\n",
+      "reg_alpha       0.05\n",
+      "score          39.70\n",
+      "Name: 46, dtype: float64\n",
+      "eta              0.33\n",
+      "max_depth        6.00\n",
+      "n_estimators   199.00\n",
+      "reg_alpha        0.39\n",
+      "score           41.30\n",
+      "Name: 47, dtype: float64\n",
+      "eta             0.96\n",
+      "max_depth       3.00\n",
+      "n_estimators   60.00\n",
+      "reg_alpha       0.02\n",
+      "score          40.96\n",
+      "Name: 48, dtype: float64\n",
+      "eta              1.89\n",
+      "max_depth       30.00\n",
+      "n_estimators   161.00\n",
+      "reg_alpha        0.13\n",
+      "score           40.93\n",
+      "Name: 49, dtype: float64\n",
+      "eta             0.38\n",
+      "max_depth      32.00\n",
+      "n_estimators   74.00\n",
+      "reg_alpha       0.71\n",
+      "score          39.67\n",
+      "Name: 50, dtype: float64\n",
+      "eta              0.31\n",
+      "max_depth       27.00\n",
+      "n_estimators   141.00\n",
+      "reg_alpha        0.52\n",
+      "score           41.51\n",
+      "Name: 51, dtype: float64\n",
+      "eta              0.66\n",
+      "max_depth       34.00\n",
+      "n_estimators   115.00\n",
+      "reg_alpha        0.37\n",
+      "score           40.67\n",
+      "Name: 52, dtype: float64\n",
+      "eta              1.27\n",
+      "max_depth        4.00\n",
+      "n_estimators   244.00\n",
+      "reg_alpha        0.79\n",
+      "score           36.31\n",
+      "Name: 53, dtype: float64\n",
+      "eta              1.19\n",
+      "max_depth       10.00\n",
+      "n_estimators   176.00\n",
+      "reg_alpha        0.18\n",
+      "score           40.03\n",
+      "Name: 54, dtype: float64\n",
+      "eta             1.30\n",
+      "max_depth      16.00\n",
+      "n_estimators   59.00\n",
+      "reg_alpha       0.06\n",
+      "score          38.93\n",
+      "Name: 55, dtype: float64\n",
+      "eta              0.08\n",
+      "max_depth       25.00\n",
+      "n_estimators   143.00\n",
+      "reg_alpha        0.33\n",
+      "score           39.27\n",
+      "Name: 56, dtype: float64\n",
+      "eta              1.44\n",
+      "max_depth       18.00\n",
+      "n_estimators   142.00\n",
+      "reg_alpha        0.42\n",
+      "score           41.67\n",
+      "Name: 57, dtype: float64\n",
+      "eta              1.21\n",
+      "max_depth       21.00\n",
+      "n_estimators   140.00\n",
+      "reg_alpha        0.50\n",
+      "score           39.97\n",
+      "Name: 58, dtype: float64\n",
+      "eta              0.24\n",
+      "max_depth       19.00\n",
+      "n_estimators   101.00\n",
+      "reg_alpha        0.34\n",
+      "score           40.06\n",
+      "Name: 59, dtype: float64\n",
+      "eta             0.09\n",
+      "max_depth      31.00\n",
+      "n_estimators   95.00\n",
+      "reg_alpha       0.75\n",
+      "score          41.32\n",
+      "Name: 60, dtype: float64\n",
+      "eta              0.23\n",
+      "max_depth       33.00\n",
+      "n_estimators   135.00\n",
+      "reg_alpha        0.76\n",
+      "score           41.38\n",
+      "Name: 61, dtype: float64\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eta                1.42\n",
+      "max_depth          2.00\n",
+      "n_estimators       4.00\n",
+      "reg_alpha          0.77\n",
+      "score          2,871.23\n",
+      "Name: 62, dtype: float64\n",
+      "eta              0.14\n",
+      "max_depth        5.00\n",
+      "n_estimators   238.00\n",
+      "reg_alpha        0.31\n",
+      "score           38.13\n",
+      "Name: 63, dtype: float64\n",
+      "eta             1.00\n",
+      "max_depth      22.00\n",
+      "n_estimators   97.00\n",
+      "reg_alpha       0.02\n",
+      "score          41.04\n",
+      "Name: 64, dtype: float64\n",
+      "eta              0.47\n",
+      "max_depth       23.00\n",
+      "n_estimators   239.00\n",
+      "reg_alpha        0.83\n",
+      "score           39.08\n",
+      "Name: 65, dtype: float64\n",
+      "eta              0.86\n",
+      "max_depth        7.00\n",
+      "n_estimators   232.00\n",
+      "reg_alpha        0.09\n",
+      "score           42.23\n",
+      "Name: 66, dtype: float64\n",
+      "eta             1.50\n",
+      "max_depth       8.00\n",
+      "n_estimators   65.00\n",
+      "reg_alpha       0.27\n",
+      "score          37.87\n",
+      "Name: 67, dtype: float64\n",
+      "eta              1.04\n",
+      "max_depth        9.00\n",
+      "n_estimators   111.00\n",
+      "reg_alpha        0.65\n",
+      "score           40.83\n",
+      "Name: 68, dtype: float64\n",
+      "eta             2.00\n",
+      "max_depth      24.00\n",
+      "n_estimators   54.00\n",
+      "reg_alpha       0.70\n",
+      "score          39.20\n",
+      "Name: 69, dtype: float64\n"
      ]
     }
    ],
