--- a/notebooks/Roger - V1.ipynb
+++ b/notebooks/Roger - V1.ipynb
@@ -17068,7 +17068,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data_roll_day['week_day'] = data_roll_day['date'].dt.dayofweek\n",
+    "data_roll_day['day'] = data_roll_day['date'].dt.day\n",
+    "data_roll_day['weekend'] = 0\n",
+    "data_roll_day.loc[daily_targets['week_day']>4, 'weekend'] = 1\n",
+    "daily_targets['holiday'] = 0\n",
+    "holidays.apply(add_holidays, axis = 1)\n",
+    "daily_targets.loc[daily_targets['week_day']>4, 'holiday'] = 1\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
