--- a/notebooks/Jonas_6.ipynb
+++ b/notebooks/Jonas_6.ipynb
@@ -899,7 +899,13 @@
       "n_estimators   54.00\n",
       "reg_alpha       0.70\n",
       "score          39.20\n",
-      "Name: 69, dtype: float64\n"
+      "Name: 69, dtype: float64\n",
+      "eta             1.08\n",
+      "max_depth      29.00\n",
+      "n_estimators   50.00\n",
+      "reg_alpha       0.43\n",
+      "score          40.20\n",
+      "Name: 70, dtype: float64\n"
      ]
     }
    ],
